--- a/index.html
+++ b/index.html
@@ -1503,6 +1503,8 @@
         <div class="lab-footer-content">
             <div class="lab-footer-item">
                 <div class="lab-footer-title">مختبر  الحسابات</div>
+              <div>  شكراً لزيارتكم</div>
+
             </div>
             <div class="lab-footer-item">
                 <div class="lab-footer-title">العنوان</div>
@@ -1822,3 +1824,4 @@
 </body>
 
 </html>
+
